FEATURE: Supported exporting whole user database file
